# vortex-rov

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: camera.yaml  competition.yaml  detection.yaml
scripts/: run_calibration.py  run_competition.py  run_coral_analysis.py  run_mosaic.py
src/: __init__.py
src/analysis/: __init__.py  coral_health.py  photomosaic.py  transect_following.py
src/camera/: __init__.py  calibration.py  capture.py  white_balance.py
src/detection/: __init__.py  box_detector.py  color_segmentation.py  marker_detector.py  yolo_detector.py
src/navigation/: __init__.py  guidance.py  poi_mapping.py
src/telemetry/: __init__.py  dashboard.py  logger.py
src/tracking/: __init__.py  centroid_tracker.py  kalman_tracker.py
src/utils/: __init__.py  geometry.py  image_ops.py
tests/: test_coral.py  test_detection.py  test_tracking.py
